--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,18 @@
 <% end %>
 </form>
 
+<% if current_user %>
+  <li class="active"><a href="#"><%= current_user.email %> <span class="sr-only">(current)</span></a></li>
+
+<% end %>
+
+<% if user_signed_in? %>
+  <li><%= link_to 'Sign Out', '/users/sign_out', method: :delete %></li>
+<% else %>
+
+<li><%= link_to 'Sign In', '/users/sign_in'%></li>
+<li><%= link_to 'Sign Up', '/users/sign_up'%></li>
+<% end %>
 
 <div class="container">
     <% flash.each do |name, message| %>
