--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -1,25 +1,107 @@
-    <%= link_to 'Home', "/resources", class: "btn btn-info" %>
+<%= link_to 'Home', "/resources", class: "btn btn-info" %>
+<%= link_to 'Add A Resource', "/resources/new", class: "btn btn-info" %>
+
+    <h1>All Resources</h1>
+
+    <%= form_tag '/', method: :get do %>
+      <%= text_field_tag :search_term, nil, placeholder: "Find" %>          
+      <%= text_field_tag :search_key, nil, placeholder: "Near" %>          
+      <%= submit_tag "Search" %>
+    <% end %>
 
 
-<h1>All Resources</h1>
+      <% @resources.businesses.each do |resource| %>
+            <h2><a href="/resources/<%= resource.id %>"><%= resource.name %></a></h2>
+            <h3>Address: <%= resource.location.display_address %></h3>
+            <h3>Category: <%= resource.categories %></h3>
+            <h3>Rating: <%= resource.rating %></h3>
+            <h3>Website: <%= resource.mobile_url %></h3>
+            <h3>Phone Number: <%= resource.phone %></h3>
+            <br>
+      <% end %>
 
+     
+
+    
+
+
+
+
+
+          
+
+  
+
+
+
+
+
+
+
+
+
+
+    
+
+     
+
+     
+
+    
+
+    
+
+
+   
+
+   
+
+   
+   
+
+
+
+   
+
+
+
+
+
+
+   
+
+   
+  
+   
 
  
-  <% @resources.each do |resource| %>
-        <h3>Company: <%= resource.company %></h3>
-        <h3>Address: <%= resource.street_address %></h3>
-        <h3>City: <%= resource.city %></h3>
-        <h3>State: <%= resource.state_abbr %></h3>
-        <h3>ZipCode: <%= resource.zip_code %></h3>
-        <h3>Website: <%= resource.url %></h3>
-        <h3>Phone Number: <%= resource.phone_number %></h3>
     
-        <br>
-      
-  <% end %>  
+ 
+    
+
+   
+        
+
+    
+
+
+   
+
+    
+
+
+  
 
         
-               
 
 
 
+
+
+
+
+
+
+
+
+   
