more data added

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -516,134 +516,16 @@
         <!--know more section end-->
 
 
-        <section class="testimonials">
-            <div class="container">
-                <div class="center-title">
-                    <i class="pe-7s-comment"></i>
-                    <h2>What they <strong>Say?</strong></h2>                        
-                </div>
-                <div class="row">
-                    <div class="col-sm-8 col-sm-offset-2 text-center">
-                        <div class="testi-slides">
-                            <ul class="slides">
-                                <li>
-                                    <img src="img/medical/team-1.png" alt="">
-                                    <h4>Peter Donald</h4>
-                                    <em>Heart Specialist</em>
+        
+       
 
-                                    <p>
-                                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-                                    </p>
-                                </li>
-                                <li>
-                                    <img src="img/medical/team-2.png" alt="">
-                                    <h4>Peter Donald</h4>
-                                    <em>Heart Specialist</em>
-
-                                    <p>
-                                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-                                    </p>
-                                </li>
-                                <li>
-                                    <img src="img/medical/team-3.png" alt="">
-                                    <h4>Peter Donald</h4>
-                                    <em>Heart Specialist</em>
-
-                                    <p>
-                                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-                                    </p>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!--testimonials end-->
-        <div class="cta">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-8 text-center">
-                        <h3>Take a tour of our medical facility</h3>
-                    </div>
-                    <div class="col-md-4 text-center">
-                        <a href="#" class="btn btn-white-border btn-lg">Make an appointment</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <section class="blog-home">
-            <div class="container">
-                <div class="center-title">
-                    <i class="pe-7s-news-paper"></i>
-                    <h2>from the <strong>Blog?</strong></h2>                        
-                </div>
-                <div class="row">
-                    <div class="col-md-4 margin30">
-                        <div class="blog-post">
-                            <img src="img/medical/bg-1.jpg" alt="" class="img-responsive">
-                            <h3>
-                                <a href="#"> Family care ipsum dolor sit amet</a>
-                            </h3>
-                            <span>July 21, 2015 by Dr. John Doe</span>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id bibendum massa, vulputate consectetur dui. Ut ut eros congue, condimentum massa
-                            </p>
-                            <p><a href="#">Read more...</a></p>
-                        </div>
-                    </div>
-                    <div class="col-md-4 margin30">
-                        <div class="blog-post">
-                            <img src="img/medical/bg-2.jpg" alt="" class="img-responsive">
-                            <h3>
-                                <a href="#"> Family care ipsum dolor sit amet</a>
-                            </h3>
-                            <span>July 21, 2015 by Dr. John Doe</span>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id bibendum massa, vulputate consectetur dui. Ut ut eros congue, condimentum massa
-                            </p>
-                            <p><a href="#">Read more...</a></p>
-                        </div>
-                    </div>
-                    <div class="col-md-4 margin30">
-                        <div class="blog-post">
-                            <img src="img/medical/bg-3.jpg" alt="" class="img-responsive">
-                            <h3>
-                                <a href="#"> Family care ipsum dolor sit amet</a>
-                            </h3>
-                            <span>July 21, 2015 by Dr. John Doe</span>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id bibendum massa, vulputate consectetur dui. Ut ut eros congue, condimentum massa
-                            </p>
-                            <p><a href="#">Read more...</a></p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <div class="cta-newsletter">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-8 col-sm-offset-2 text-center">
-                        <h3>Subscribe to Newsletter</h3>
-                        <p>Subscribe to our newsletter and get latest news from us</p>
-                        <form class="form-inline assan-newsletter">
-                            <div class="form-group">
-                                <input type="text" name="email" class="form-control" id="email" placeholder="Your email">
-                            </div>
-                            <button type="submit" name="submit" class="btn btn-theme-bg btn-lg">Subscribe</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
+        
 
         <footer class="footer">
             <div class="container">
                 <div class="row">
                     <div class="col-md-3 margin30">
-                        <h3>About Medical</h3>
+                        <h3>About Shield</h3>
                         <p>
                             Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                         </p>
