--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -1,62 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>Shield | Doctors</title>
 
         
-
-
-        <!-- Bootstrap -->
-        <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-        <!--plugins css-->
-        <link href="css/owl.carousel.css" rel="stylesheet">
-        <link href="css/owl.theme.css" rel="stylesheet">
-        <link href="css/flexslider.css" rel="stylesheet">
-        <link href="css/animate.css" rel="stylesheet">
-        <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
-        <!--custom css for only medial template-->
-        <link href="css/medical.css" type="text/css" rel="stylesheet">
-
-        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-        <!--[if lt IE 9]>
-          <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-          <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-        <![endif]-->
-    </head>
-    <body>
-        <div class="container">
-            <div class="top-bar">
-                <div class="row">
-                    <div class="col-md-7 hidden-xs hidden-sm">
-                        <span><i class="pe-7s-phone"></i> </span>
-                    </div>
-                    <div class="col-md-5 text-right">
-                        <div class="top-bar-right">
-                            <a href="#" class="social-icon-sm si-border-round si-facebook">
-                                <i class="fa fa-facebook"></i>
-                                <i class="fa fa-facebook"></i>
-                            </a>
-                            <a href="#" class="social-icon-sm si-border-round si-twitter">
-                                <i class="fa fa-twitter"></i>
-                                <i class="fa fa-twitter"></i>
-                            </a>
-                            <a href="#" class="social-icon-sm si-border-round si-g-plus">
-                                <i class="fa fa-youtube-play"></i>
-                                <i class="fa fa-youtube-play"></i>
-                            </a>
-                            <a href="#" class="appointment">make an appointment</a>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-        </div>
         <!-- Static navbar -->
         <nav class="navbar navbar-default navbar-static-top">
             <div class="container">
@@ -70,10 +13,20 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="/">Home</a></li>
-                        <li><a href="medical-about.html">About</a></li>
-                        <li class="active"><a href="medical-doctors.html">Doctors</a></li>
-                        
+                        <li class="active"><a href="/">Home</a></li>
+                        <li><a href="/doctors">Doctors</a></li>
+                        <li class="dropdown">
+                            <a href="/services" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Services <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="medical-services.html">Housing</a></li>
+                                <li><a href="medical-services.html">Education and Employment Services</a></li>
+                                <li><a href="medical-services.html">Medical Care</a></li>
+                                <li><a href="medical-services.html">Counseling, Mental Health Services, Support Groups</a></li>
+                                <li><a href="medical-services.html">Case Management, Referrals, and Supportive Services</a></li>
+                                <li><a href="medical-services.html">Food and Clothing Assistance</a></li>
+
+                            </ul>
+                        </li>
                         
                     </ul>
                 </div><!--/.nav-collapse -->
@@ -94,10 +47,9 @@
         <div class="container">   
             <ul class="filter list-inline">
                 <li><a class="active" href="#" data-filter="*">Show All</a></li>
-                <li><a href="#" data-filter=".cardiac ">cardiac clinic </a></li>
-                <li><a href="#" data-filter=".gynaecological ">gynaecological Clinic </a></li>
+                <li><a href="#" data-filter=".cardiac ">infectious disease</a></li>
+                <li><a href="#" data-filter=".gynaecological ">gynaecological</a></li>
                 <li><a href="#" data-filter=".cancer ">cancer specialist </a></li>
-                <li><a href="#" data-filter=".heart">Heart specialist</a></li>
             </ul>
             <div class="row">
                 <div class="portfolio-box iso-call col-3-space">
@@ -107,6 +59,7 @@
                             <img src="img/medical/team-1.png" class="img-responsive" alt="team">
                             
                         </div> 
+                        
                         <div class="team-desc">
                             <h3><a href="#">David nick</a></h3>
                             <span>Hear specialist</span>
@@ -204,113 +157,8 @@
 
 
 
+
         
-        <footer class="footer">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-3 margin30">
-                        <h3>About Medical</h3>
-                        <p>
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                        </p>
-                        <ul class="list-unstyled contact-details">
-                            <li class="clearfix">
-                                <i class="pe-7s-home"></i>
-                                <p>
-                                    124, Munna wali street, queens road, 302012
-                                </p>
-                            </li>
-                            <li class="clearfix">
-                                <i class="pe-7s-phone"></i>
-                                <p>
-                                    +01 1800 555 33
-                                </p>
-                            </li>
-                            <li class="clearfix">
-                                <i class="pe-7s-mail"></i>
-                                <p>
-                                    support@assanmedical.com
-                                </p>
-                            </li>
-                        </ul>
-                        <div class="socials-colored">
-                            <a href="#" class="social-icon si-dark si-colored-facebook">
-                                <i class="fa fa-facebook"></i>
-                                <i class="fa fa-facebook"></i>
-                            </a>
-                            <a href="#" class="social-icon si-dark si-colored-twitter">
-                                <i class="fa fa-twitter"></i>
-                                <i class="fa fa-twitter"></i>
-                            </a>
-                            <a href="#" class="social-icon si-dark si-colored-google-plus">
-                                <i class="fa fa-google-plus"></i>
-                                <i class="fa fa-google-plus"></i>
-                            </a>
-                            <a href="#" class="social-icon si-dark si-colored-google-plus">
-                                <i class="fa fa-youtube-play"></i>
-                                <i class="fa fa-youtube-play"></i>
-                            </a>
-                            <a href="#" class="social-icon si-dark si-colored-linkedin">
-                                <i class="fa fa-linkedin"></i>
-                                <i class="fa fa-linkedin"></i>
-                            </a>
-                        </div>
-                    </div><!--col-->
-                    <div class="col-md-3 margin30">
-                        <h3>Quick links</h3>
-                        <ul class="list-unstyled quick-links">
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">Faqs</a></li>
-                            <li><a href="#">About us</a></li>
-                            <li><a href="#">make an appointment</a></li>
-                            <li><a href="#">Blog</a></li>
-                            <li><a href="#">Contact</a></li>
-                            <li><a href="#">Privacy & policy</a></li>
-                            <li><a href="#">Terms & conditions</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-3 margin30">
-                        <h3>latest news</h3>
-                        <ul class="list-unstyled latest-news">
-                            <li>
-                                <a href="#">Sed do eiusmod tempor incididunt ut labore</a>
-                                <em><i class="fa fa-comments-o"></i> 6 comments</em>
-                            </li>
-                            <li>
-                                <a href="#">Lorem Ipsum is simply dummy text of the printing.</a>
-                                <em><i class="fa fa-comments-o"></i> 6 comments</em>
-                            </li>
-                            <li>
-                                <a href="#">Sed do eiusmod tempor incididunt ut labore</a>
-                                <em><i class="fa fa-comments-o"></i> 6 comments</em>
-                            </li>                          
-                        </ul>
-                    </div>
-                    <div class="col-md-3 margin30">
-                        <h3>Quick Contact</h3>
-                        <form role="form">
-                            <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Name">
-                            </div>
-                            <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Email">
-                            </div>
-                            <div class="form-group">
-                                <textarea class="form-control" rows="3" placeholder="Message"></textarea>
-                            </div>
-                            <div class="form-group text-right">
-                                <button type="button" class="btn btn-theme-bg btn-lg">Submit</button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-            <div class="footer-copyright">
-                <div class="container">
-                    <span>Copyright &copy; 2015. All right reserved.</span>
-                </div>
-            </div>
-        </footer>
 
         <script src="js/jquery.min.js"></script>
           <script src="js/jquery-migrate.min.js"></script>
@@ -325,5 +173,3 @@
         <script src="js/jquery.isotope.min.js" type="text/javascript"></script>
         <script src="js/jquery.imagesloaded.min.js" type="text/javascript"></script>
         <script src="js/isotope-custom.js" type="text/javascript"></script>
-    </body>
-</html>
