--- a/app/views/layouts/special.html.erb
+++ b/app/views/layouts/special.html.erb
@@ -4,10 +4,25 @@
   <meta charset="UTF-8">
   <title>S.H.I.E.L.D.</title>
 
-  <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= stylesheet_link_tag    'skrollr.css' %>
-  <%= javascript_include_tag 'application' %>
   <%= javascript_include_tag 'skrollr.min.js' %>
+  <%= stylesheet_link_tag    'application', media: 'all' %>
+  <%= javascript_include_tag 'application' %>
+
+  <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+  <!--plugins css-->
+  <link href="css/owl.carousel.css" rel="stylesheet">
+  <link href="css/owl.theme.css" rel="stylesheet">
+  <link href="css/flexslider.css" rel="stylesheet">
+  <link href="css/animate.css" rel="stylesheet">
+  <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
+  <!--Revolution slider css-->
+  <link href="rs-plugin/css/settings.css" rel="stylesheet" type="text/css" media="screen">
+  <link href="css/rev-style.css" rel="stylesheet" type="text/css" media="screen">
+  <!--custom css for only medial template-->
+  <link href="css/medical.css" type="text/css" rel="stylesheet">
+  
   <%= csrf_meta_tags %>
 </head>
 <body>
