--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -1,18 +1,21 @@
-<div id="wall" data-500-end="opacity:0;" data-top="opacity:100;"  >
-     <%= image_tag "brick-wall.jpg" %>
-  </div>
+<!-- <div id="wall" data-500-end="opacity:100;" data-top="opacity:0;"  >
+    <%= image_tag "brick-wall.jpg" %>
+</div>
 
-  <div id="silo" data-500-end="opacity:0;" data-top="opacity:1;" >
-     <%= image_tag "mike_silo.png" %>
-  </div>
+<div id="silo" data-500-end="opacity:1;" data-top="opacity:0;" >
+    <%= image_tag "mike_silo.png" %>
+</div>
 
-  <div id="cell" data-500-end="opacity:0;" data-top="opacity:1;"  >
-     <%= image_tag "jail-cell-bars-psd-449125.png" %>
-  </div>
+<div id="logo" data-500-end="opacity:0;" data-top="opacity:100;" >
+    <%= image_tag "Shield-logo_1.png" %>
+</div>
 
-   <script type="text/javascript">
-  skrollr.init();
-  </script>
+<div id="cell" data-500-end="opacity:1;" data-top="opacity:100;"  >
+    <%= image_tag "jail-cell-bars-psd-449125.png" %>
+</div> -->
+
+
+
 
         <!-- Static navbar -->
         <nav class="navbar navbar-default navbar-static-top">
@@ -32,20 +35,21 @@
                         <li class="dropdown">
                             <a href="/services" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Services <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="medical-services.html">Housing</a></li>
-                                <li><a href="medical-services.html">Education and Employment Services</a></li>
-                                <li><a href="medical-services.html">Medical Care</a></li>
-                                <li><a href="medical-services.html">Counseling, Mental Health Services, Support Groups</a></li>
-                                <li><a href="medical-services.html">Case Management, Referrals, and Supportive Services</a></li>
-                                <li><a href="medical-services.html">Food and Clothing Assistance</a></li>
-
+                                <li><a href="/services">Home</a></li>
+                                <li><a href="/eaes">Education and Employment Services</a></li>
+                                <li><a href="/houses">Housing</a></li>
+                                <li><a href="/mc">Medical Care</a></li>
+                                <li><a href="/cms">Counseling, Mental Health Services, Support Groups</a></li>
+                                <li><a href="/crs">Case Management, Referrals, and Supportive Services</a></li>
+                                <li><a href="/faca">Food and Clothing Assistance</a></li>
                             </ul>
                         </li>
-                        
                     </ul>
                 </div><!--/.nav-collapse -->
             </div><!--/.container-fluid -->
         </nav>
+
+                        
 
         <!--rev slider start-->
 
@@ -451,3 +455,8 @@
             </div>
         </section>
         <!--know more section end-->
+  </div> <!-- page after skrollr -->
+
+  <script type="text/javascript">
+    skrollr.init();
+  </script>
