--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -12,21 +12,27 @@
                         <span class="icon-bar"></span>
                     </button>
                 </div>
+
+                
+             
+
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="/">Home</a></li>
                         <li><a href="/doctors">Doctors</a></li>
                         <li class="dropdown active">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Services <span class="caret"></span></a>
+                            <a href="/services" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Services <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="medical-services.html">Housing</a></li>
-                                <li><a href="medical-services.html">Education and Employment Services</a></li>
-                                <li><a href="medical-services.html">Medical Care</a></li>
-                                <li><a href="medical-services.html">Counseling, Mental Health Services, Support Groups</a></li>
-                                <li><a href="medical-services.html">Case Management, Referrals, and Supportive Services</a></li>
-                                <li><a href="medical-services.html">Food and Clothing Assistance</a></li>
+                                <li><a href="/services">Home</a></li>
+                                <li><a href="/eaes">Education and Employment Services</a></li>
+                                <li><a href="/houses">Housing</a></li>
+                                <li><a href="/mc">Medical Care</a></li>
+                                <li><a href="/cms">Counseling, Mental Health Services, Support Groups</a></li>
+                                <li><a href="/crs">Case Management, Referrals, and Supportive Services</a></li>
+                                <li><a href="/faca">Food and Clothing Assistance</a></li>
                             </ul>
                         </li>
+                            
                         
                     </ul>
                 </div><!--/.nav-collapse -->
@@ -51,9 +57,9 @@
                         <i class="fa fa-medkit"></i>
                         <h4>Housing</h4>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id bibendum massa, vulputate consectetur dui. Ut ut eros congue, condimentum massa
+                            
                         </p>
-                        <a href="#" class="btn btn-theme-bg">Know more...</a>
+                        <a href="/houses" class="btn btn-theme-bg">Know more...</a>
                     </div>
                 </div><!--col end-->
                 <div class="col-sm-4 margin30">
@@ -62,9 +68,9 @@
                         <i class="fa fa-medkit"></i>
                         <h4>Education and Employment Services</h4>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id bibendum massa, vulputate consectetur dui. Ut ut eros congue, condimentum massa
+                            
                         </p>
-                        <a href="#" class="btn btn-theme-bg">Know more...</a>
+                        <a href="/eaes" class="btn btn-theme-bg">Know more...</a>
                     </div>
                 </div><!--col end-->
                 <div class="col-sm-4 margin30">
@@ -73,9 +79,9 @@
                         <i class="fa fa-medkit"></i>
                         <h4>Medical Care</h4>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id bibendum massa, vulputate consectetur dui. Ut ut eros congue, condimentum massa
+                           
                         </p>
-                        <a href="#" class="btn btn-theme-bg">Know more...</a>
+                        <a href="/mc" class="btn btn-theme-bg">Know more...</a>
                     </div>
                 </div><!--col end-->
             </div><!--row end-->
@@ -86,9 +92,9 @@
                         <i class="fa fa-medkit"></i>
                         <h4>Counseling, Mental Health Services, Support Groups</h4>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id bibendum massa, vulputate consectetur dui. Ut ut eros congue, condimentum massa
+                            
                         </p>
-                        <a href="#" class="btn btn-theme-bg">Know more...</a>
+                        <a href="/cms" class="btn btn-theme-bg">Know more...</a>
                     </div>
                 </div><!--col end-->
                 <div class="col-sm-4 margin30">
@@ -97,9 +103,9 @@
                         <i class="fa fa-medkit"></i>
                         <h4>Case Management, Referrals, and Supportive Services</h4>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id bibendum massa, vulputate consectetur dui. Ut ut eros congue, condimentum massa
+                            
                         </p>
-                        <a href="#" class="btn btn-theme-bg">Know more...</a>
+                        <a href="/crs" class="btn btn-theme-bg">Know more...</a>
                     </div>
                 </div><!--col end-->
                 <div class="col-sm-4 margin30">
@@ -108,9 +114,9 @@
                         <i class="fa fa-medkit"></i>
                         <h4>Food and Clothing Assistance</h4>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id bibendum massa, vulputate consectetur dui. Ut ut eros congue, condimentum massa
+                            
                         </p>
-                        <a href="#" class="btn btn-theme-bg">Know more...</a>
+                        <a href="/faca" class="btn btn-theme-bg">Know more...</a>
                     </div>
                 </div><!--col end-->
             </div><!--row end-->
