--- a/app/assets/stylesheets/cms.scss
+++ b/app/assets/stylesheets/cms.scss
@@ -1,3 +1,3 @@
-// Place all the styles related to the doctors controller here.
+// Place all the styles related to the cms controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
