--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -13,25 +13,26 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li class="active"><a href="/">Home</a></li>
-                        <li><a href="/doctors">Doctors</a></li>
+                        <li><a href="/">Home</a></li>
+                        <li class="active"><a href="/doctors">Doctors</a></li>
                         <li class="dropdown">
                             <a href="/services" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Services <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="medical-services.html">Housing</a></li>
-                                <li><a href="medical-services.html">Education and Employment Services</a></li>
-                                <li><a href="medical-services.html">Medical Care</a></li>
-                                <li><a href="medical-services.html">Counseling, Mental Health Services, Support Groups</a></li>
-                                <li><a href="medical-services.html">Case Management, Referrals, and Supportive Services</a></li>
-                                <li><a href="medical-services.html">Food and Clothing Assistance</a></li>
-
+                               <li><a href="/services">Home</a></li>
+                                <li><a href="/eaes">Education and Employment Services</a></li>
+                                <li><a href="/houses">Housing</a></li>
+                                <li><a href="/mc">Medical Care</a></li>
+                                <li><a href="/cms">Counseling, Mental Health Services, Support Groups</a></li>
+                                <li><a href="/crs">Case Management, Referrals, and Supportive Services</a></li>
+                                <li><a href="/faca">Food and Clothing Assistance</a></li>
                             </ul>
                         </li>
-                        
                     </ul>
                 </div><!--/.nav-collapse -->
             </div><!--/.container-fluid -->
         </nav>
+
+                        
 
         <div class="medical-breadcrumb">
             <div class="container">
@@ -160,9 +161,9 @@
 
         
 
-        <script src="js/jquery.min.js"></script>
-          <script src="js/jquery-migrate.min.js"></script>
-        <script src="bootstrap/js/bootstrap.min.js"></script>
+       <!--  <script src="js/jquery.min.js"></script> -->
+          <!-- <script src="js/jquery-migrate.min.js"></script> -->
+       <!--  <script src="bootstrap/js/bootstrap.min.js"></script> -->
         <script src="js/pace.min.js" type="text/javascript"></script>
         <script src="js/jquery.flexslider-min.js" type="text/javascript"></script>
         <script src="js/jquery.stellar.min.js" type="text/javascript"></script>
