--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -66,7 +66,7 @@
                              data-speed="1000"
                              data-start="1000"
                              data-easing="easeOutExpo">
-                            S.H.I.E.L.D <br>
+                            S.H.I.E.L.D. <br>
                             <span class="colored-text">Our Youth</span>
                         </div>
 
@@ -78,7 +78,7 @@
                              data-speed="1000"
                              data-start="1800"
                              data-easing="easeOutExpo">
-                            Strategic Hazard Intervention for Early Life Detainees 
+                            <span class="colored-text">Strategic Hazard Intervention for Early Life Detainees</span>
                           
                         </div>
                         <div class="caption sfb rev-buttons tp-resizeme"
