--- a/app/views/cms/index.html.erb
+++ b/app/views/cms/index.html.erb
@@ -12,7 +12,7 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="/">Home</a></li>
+                        <li><a href="/resources">Home</a></li>
                         <li><a href="/doctors">Doctors</a></li>
                         <li class="dropdown">
                             <a href="/services" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Services <span class="caret"></span></a>
