--- a/app/views/cms/index.html.erb
+++ b/app/views/cms/index.html.erb
@@ -1,37 +1,4 @@
-<!-- Static navbar -->
-        <nav class="navbar navbar-default navbar-static-top">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="#"><img src="" alt=""></a>
-                </div>
-                <div id="navbar" class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="/resources">Home</a></li>
-                        <li><a href="/doctors">Doctors</a></li>
-                        <li class="dropdown">
-                            <a href="/services" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Services <span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="/services">Home</a></li>
-                                <li><a href="/eaes">Education and Employment Services</a></li>
-                                <li><a href="/houses">Housing</a></li>
-                                <li><a href="/mc">Medical Care</a></li>
-                                <li><a href="/cms">Counseling, Mental Health Services, Support Groups</a></li>
-                                <li><a href="/crs">Case Management, Referrals, and Supportive Services</a></li>
-                                <li><a href="/faca">Food and Clothing Assistance</a></li>
-                                
-                            </ul>
-                        </li>
-                        
-                    </ul>
-                </div><!--/.nav-collapse -->
-            </div><!--/.container-fluid -->
-        </nav>
+
 
         <div class="container">
             <h2>Case Management, Referrals, and Supportive Services</h2>
@@ -45,7 +12,7 @@
                             <th>City</th>
                             <th>State</th>
                             <th>ZipCode</th>
-                            <th>Phone Nubmber</th>
+                            <th>Phone Number</th>
                             <th>Website</th>
                         </tr>
                     </thead>
