--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -1,36 +1,4 @@
 
-        
-        <!-- Static navbar -->
-        <nav class="navbar navbar-default navbar-static-top">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                </div>
-                <div id="navbar" class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="/resources">Home</a></li>
-                        <li class="active"><a href="/doctors">Doctors</a></li>
-                        <li class="dropdown">
-                            <a href="/services" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Services <span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-                               <li><a href="/services">Home</a></li>
-                                <li><a href="/eaes">Education and Employment Services</a></li>
-                                <li><a href="/houses">Housing</a></li>
-                                <li><a href="/mc">Medical Care</a></li>
-                                <li><a href="/cms">Counseling, Mental Health Services, Support Groups</a></li>
-                                <li><a href="/crs">Case Management, Referrals, and Supportive Services</a></li>
-                                <li><a href="/faca">Food and Clothing Assistance</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div><!--/.nav-collapse -->
-            </div><!--/.container-fluid -->
-        </nav>
 
                         
 
@@ -45,6 +13,8 @@
         </div><!--breadcrumb-->
         <div class="divide70"></div>
 
+
+
         <div class="container">   
             <ul class="filter list-inline">
                 <li><a class="active" href="#" data-filter="*">Show All</a></li>
@@ -52,125 +22,59 @@
                 <li><a href="#" data-filter=".gynaecological ">gynaecological</a></li>
                 <li><a href="#" data-filter=".cancer ">cancer specialist </a></li>
             </ul>
+
+            <div class="table-responsive">
+                <table class="table table-striped table-bordered" width="100%">
+                    <thead>
+                        <tr>
+                            <th><b>Doctor First Name</b></th>
+                            <th><b>Doctor Last Name</b></th>
+                            <th><b>Title</b></th>
+                            <th><b>Gender</b></th>
+                            <th><b>Speciality</b></th>
+                            <th><b>Provider URL</b></th>
+
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <% @doctors.each do |doctor| %>
+                        <tr>
+                               <td><%= doctor['profile']['first_name'] %></td>
+                               <td><%= doctor['profile']['last_name'] %></td>
+                               <td><%= doctor['profile']['title'] %></td>
+                               <td><%= doctor['profile']['gender'] %></td>
+                                <td><% doctor['specialties'].each do |specialty| %>
+                                <%= specialty['name'] %><br>
+                                <td><% doctor['ratings'].each do |rating| %>
+                                <%= link_to rating['provider_url'], rating['provider_url'] %>
+                                <br>
+                                <% end %>
+                                
+                                <% end %>
+                                </td>
+                         
+
+                          </tr>
+                      <% end %>
+                  </tbody>
+              </table>
+          </div>
+
+            
+
+
             <div class="row">
                 <div class="portfolio-box iso-call col-3-space">
 
-                    <div class="project-post cardiac  cancer ">
-                        <div class="item-img-wrap ">
-                            <img src="img/medical/team-1.png" class="img-responsive" alt="team">
-                            
-                        </div> 
-                        
-                        <div class="team-desc">
-                            <h3><a href="#">David nick</a></h3>
-                            <span>Hear specialist</span>
-                        </div><!--team desc-->
-                    </div><!--project post-->
-                    <div class="project-post gynaecological  heart">
-                       <div class="item-img-wrap ">
-                            <img src="img/medical/team-2.png" class="img-responsive" alt="team">
-                            
-                        </div> 
-                        <div class="team-desc">
-                            <h3><a href="#">David nick</a></h3>
-                            <span>Hear specialist</span>
-                        </div><!--team desc-->
-                    </div><!--project post-->
-
-                    <div class="project-post gynaecological  heart">
-                       <div class="item-img-wrap ">
-                            <img src="img/medical/team-3.png" class="img-responsive" alt="team">
-                            
-                        </div> 
-                        <div class="team-desc">
-                            <h3><a href="#">David nick</a></h3>
-                            <span>Hear specialist</span>
-                        </div><!--team desc-->
-                    </div><!--project post-->
-                    <div class="project-post cardiac  heart">
-                        <div class="item-img-wrap ">
-                            <img src="img/medical/team-3.png" class="img-responsive" alt="team">
-                            
-                        </div> 
-                        <div class="team-desc">
-                            <h3><a href="#">David nick</a></h3>
-                            <span>Hear specialist</span>
-                        </div><!--team desc-->
-                    </div><!--project post-->
-
-                    <div class="project-post cancer ">
-                      <div class="item-img-wrap ">
-                            <img src="img/medical/team-4.png" class="img-responsive" alt="team">
-                            
-                        </div> 
-                        <div class="team-desc">
-                            <h3><a href="#">David nick</a></h3>
-                            <span>Hear specialist</span>
-                        </div><!--team desc-->
-                    </div><!--project post-->
-                    <div class="project-post  gynaecological ">
-                        <div class="item-img-wrap ">
-                            <img src="img/medical/team-1.png" class="img-responsive" alt="team">
-                            
-                        </div> 
-                        <div class="team-desc">
-                            <h3><a href="#">David nick</a></h3>
-                            <span>Hear specialist</span>
-                        </div><!--team desc-->
-                    </div><!--project post-->
-
-                    <div class="project-post  cancer ">
-                        <div class="item-img-wrap ">
-                            <img src="img/medical/team-2.png" class="img-responsive" alt="team">
-                            
-                        </div> 
-                        <div class="team-desc">
-                            <h3><a href="#">David nick</a></h3>
-                            <span>Hear specialist</span>
-                        </div><!--team desc-->
-                    </div><!--project post-->
-
-
-                    <div class="project-post   heart">
-                       <div class="item-img-wrap ">
-                            <img src="img/medical/team-4.png" class="img-responsive" alt="team">
-                            
-                        </div> 
-                        <div class="team-desc">
-                            <h3><a href="#">David nick</a></h3>
-                            <span>Hear specialist</span>
-                        </div><!--team desc-->
-                    </div><!--project post-->
-
-                    <div class="project-post  cancer ">
-                       <div class="item-img-wrap ">
-                            <img src="img/medical/team-3.png" class="img-responsive" alt="team">
-                            
-                        </div> 
-                        <div class="team-desc">
-                            <h3><a href="#">David nick</a></h3>
-                            <span>Hear specialist</span>
-                        </div><!--team desc-->
-                    </div><!--project post-->
+                    
                 </div>
             </div>
         </div><!--container-->
 
 
+        
 
 
         
 
-       <!--  <script src="js/jquery.min.js"></script> -->
-          <!-- <script src="js/jquery-migrate.min.js"></script> -->
-       <!--  <script src="bootstrap/js/bootstrap.min.js"></script> -->
-        <script src="js/pace.min.js" type="text/javascript"></script>
-        <script src="js/jquery.flexslider-min.js" type="text/javascript"></script>
-        <script src="js/jquery.stellar.min.js" type="text/javascript"></script>
-        <script src="js/jquery.magnific-popup.min.js" type="text/javascript"></script>
-        <script src="js/wow.min.js" type="text/javascript"></script>
-        <script src="js/waypoints.min.js"></script>
-        <script src="js/medical-custom.js" type="text/javascript"></script>
-        <script src="js/jquery.isotope.min.js" type="text/javascript"></script>
-        <script src="js/jquery.imagesloaded.min.js" type="text/javascript"></script>
-        <script src="js/isotope-custom.js" type="text/javascript"></script>
+       
