--- a/app/views/skrollr/index.html.erb
+++ b/app/views/skrollr/index.html.erb
@@ -32,6 +32,20 @@
 			margin:auto;
 		}
 
+		#enter {
+			position:fixed;
+			right:0;
+			bottom:0;
+			left:0;
+			width: 100%;
+		}
+
+		#enter > img {
+			display:block;
+			margin:auto;
+			width: 100%;
+		}
+
 		
 
 		#cell > img {
@@ -61,19 +75,7 @@
 			width: 100%;
 		}
 
-		#enter {
-			position:fixed;
-			right:0;
-			bottom:0;
-			left:0;
-			width: 100%;
-		}
-
-		#enter > img {
-			display:block;
-			margin:auto;
-			width: 100%;
-		}
+		
 
 
 	</style>
@@ -82,12 +84,6 @@
 		
 
 		
-
-
-
-
-
-
 <body>
 
 	<div id="wall" data-500-end="opacity:100;" data-top="opacity:0;"  >
@@ -107,8 +103,10 @@
 	</div>
 
 	<div id="enter" data-500-top="opacity:0;" data-end="opacity:1;"  >
-		<%= link_to 'SHIELD', '/resources', method: :get, class: "btn btn-default" %>
+		<%= link_to 'ENTER SHIELD', '/resources', method: :get, class: "btn btn-default" %>
 	</div>
+
+	
 
 
 
@@ -121,6 +119,12 @@
 </body>
 
 </html>
+
+
+
+
+
+
 
 
 
