--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
                     </div>
                     <div class="col-md-5 text-right">
                         <div class="top-bar-right">
-                            <a href="#" class="social-icon-sm si-border-round si-facebook">
+                            <a href="/" class="social-icon-sm si-border-round si-facebook">
                                 <i class="fa fa-facebook"></i>
                                 <i class="fa fa-facebook"></i>
                             </a>
