--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -23,7 +23,7 @@
                         <p>
                             
                         </p>
-                        <a href="/houses" class="btn btn-theme-bg">Know more...</a>
+                        <a href="/houses" target="_blank" class="btn btn-theme-bg">Know more...</a>
                     </div>
                 </div><!--col end-->
                 <div class="col-sm-4 margin30">
@@ -34,7 +34,7 @@
                         <p>
                             
                         </p>
-                        <a href="/eaes" class="btn btn-theme-bg">Know more...</a>
+                        <a href="/eaes" target="_blank" class="btn btn-theme-bg">Know more...</a>
                     </div>
                 </div><!--col end-->
                 <div class="col-sm-4 margin30">
@@ -45,7 +45,7 @@
                         <p>
                            
                         </p>
-                        <a href="/mc" class="btn btn-theme-bg">Know more...</a>
+                        <a href="/mc" target="_blank" class="btn btn-theme-bg">Know more...</a>
                     </div>
                 </div><!--col end-->
             </div><!--row end-->
@@ -58,7 +58,7 @@
                         <p>
                             
                         </p>
-                        <a href="/cms" class="btn btn-theme-bg">Know more...</a>
+                        <a href="/cms" target="_blank" class="btn btn-theme-bg">Know more...</a>
                     </div>
                 </div><!--col end-->
                 <div class="col-sm-4 margin30">
@@ -69,7 +69,7 @@
                         <p>
                             
                         </p>
-                        <a href="/crs" class="btn btn-theme-bg">Know more...</a>
+                        <a href="/crs" target="_blank" class="btn btn-theme-bg">Know more...</a>
                     </div>
                 </div><!--col end-->
                 <div class="col-sm-4 margin30">
@@ -80,7 +80,7 @@
                         <p>
                             
                         </p>
-                        <a href="/faca" class="btn btn-theme-bg">Know more...</a>
+                        <a href="/faca" target="_blank" class="btn btn-theme-bg">Know more...</a>
                     </div>
                 </div><!--col end-->
             </div><!--row end-->
