--- a/app/views/cms/index.html.erb
+++ b/app/views/cms/index.html.erb
@@ -1,7 +1,7 @@
 
 
         <div class="container">
-            <h2>Case Management, Referrals, and Supportive Services</h2>
+            <h2>Counseling, Mental Health Services, Support Groups</h2>
 
             <div class="table-responsive">
                 <table class="table table-striped table-bordered" width="100%">
@@ -19,7 +19,7 @@
                     <tbody>
                         <% @services.each do |service| %>
                             <tr>
-                              <td><h4><a href="/services/<%= service.id %>"><%= service.name %></a></h4></td>
+                              <td><h4><a href="/services/<%= service.id %>" target="_blank" ><%= service.name %></a></h4></td>
                               <td><h5> <%= service.address %></h5></td>
                               <td><h5> <%= service.city %></h5></td>
                               <td><h5> <%= service.state %></h5></td>
