--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -1,80 +1,84 @@
-
-
-                        
-
-        <div class="medical-breadcrumb">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6">
-                        <h2>Meet the doctors</h2>
-                    </div>
-                </div>
-            </div>
-        </div><!--breadcrumb-->
-        <div class="divide70"></div>
-
-
-
-        <div class="container">   
-            <ul class="filter list-inline">
-                <li><a class="active" href="#" data-filter="*">Show All</a></li>
-                <li><a href="#" data-filter=".cardiac ">infectious disease</a></li>
-                <li><a href="#" data-filter=".gynaecological ">gynaecological</a></li>
-                <li><a href="#" data-filter=".cancer ">cancer specialist </a></li>
-            </ul>
-
-            <div class="table-responsive">
-                <table class="table table-striped table-bordered" width="100%">
-                    <thead>
-                        <tr>
-                            <th><b>Doctor First Name</b></th>
-                            <th><b>Doctor Last Name</b></th>
-                            <th><b>Title</b></th>
-                            <th><b>Gender</b></th>
-                            <th><b>Speciality</b></th>
-                            <th><b>Provider URL</b></th>
-
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <% @doctors.each do |doctor| %>
-                        <tr>
-                               <td><%= doctor['profile']['first_name'] %></td>
-                               <td><%= doctor['profile']['last_name'] %></td>
-                               <td><%= doctor['profile']['title'] %></td>
-                               <td><%= doctor['profile']['gender'] %></td>
-                                <td><% doctor['specialties'].each do |specialty| %>
-                                <%= specialty['name'] %><br>
-                                <td><% doctor['ratings'].each do |rating| %>
-                                <%= link_to rating['provider_url'], rating['provider_url'] %>
-                                <br>
-                                <% end %>
-                                
-                                <% end %>
-                                </td>
-                         
-
-                          </tr>
-                      <% end %>
-                  </tbody>
-              </table>
-          </div>
-
             
-
-
+    <div class="medical-breadcrumb">
+        <div class="container">
             <div class="row">
-                <div class="portfolio-box iso-call col-3-space">
-
-                    
+                <div class="col-md-6">
+                    <h2>Meet the doctors</h2>
                 </div>
             </div>
-        </div><!--container-->
+        </div>
+    </div><!--breadcrumb-->
+    <div class="divide70"></div>
 
 
-        
+        <form>
+            <%= form_tag '/', method: :get, class: "navbar-form navbar-right" do %>
+              <div class="form-group">
+              <%= text_field_tag :search_term, nil, class: "form-control", placeholder: "e.g. toothache" %>          
+              </div>
+
+              <%= submit_tag "Search", class: "btn btn-default" %>
+            <% end %>
+            </form>
 
 
-        
+    <div class="container">   
+    	
 
-       
+    	<div class="table-responsive">
+    		<table class="table table-striped table-bordered" width="100%">
+    			<thead>
+    				<tr>
+    					<th><b>Doctor First Name</b></th>
+    					<th><b>Doctor Last Name</b></th>
+    					<th><b>Title</b></th>
+    					<th><b>Gender</b></th>
+    					<th><b>Speciality</b></th>
+    					<th><b>Provider URL</b></th>
+
+    				</tr>
+    			</thead>
+    			<tbody>
+    				<% @doctors.each do |doctor| %>
+    				<tr>
+    				   <td><%= doctor['profile']['first_name'] %></td>
+    				   <td><%= doctor['profile']['last_name'] %></td>
+    				   <td><%= doctor['profile']['title'] %></td>
+    				   <td><%= doctor['profile']['gender'] %></td>
+    				<td><% doctor['specialties'].each do |specialty| %>                                
+    					<%= specialty['name'] %>
+                        <br>
+                        <% end %>
+
+    					<td><% doctor['ratings'].each do |rating| %>
+    					<%= link_to rating['provider_url'], rating['provider_url'] %>
+    					<br>
+    					<% end %>
+    					
+    				</td>
+    				 
+
+    			  </tr>
+    			  <% end %>
+    		  </tbody>
+    	  </table>
+      </div>
+
+    	
+
+
+    	<div class="row">
+    		<div class="portfolio-box iso-call col-3-space">
+
+    			
+    		</div>
+    	</div>
+    </div><!--container-->
+
+
+
+
+
+
+
+
