--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -1,10 +1,15 @@
+<div class="container">
+  <h2><%= @service.name %></h2>
+  <h2><%= @service.address %></h2>
+</div>
+
+
 <iframe
-  width="200"
-  height="200"
+  width="500"
+  height="500"
   frameborder="0" style="border:0"
   src="https://www.google.com/maps/embed/v1/place?key=AIzaSyD_YLc6hND831FMpDgZn08NH6BXLLS3l-Q
     &q=<%=@service.full_address%>" allowfullscreen>
 </iframe>
 
 
-<td><h4> <%= @service.name %></a></h4></td>
