--- a/app/views/skrollr/index.html.erb
+++ b/app/views/skrollr/index.html.erb
@@ -1,90 +1,4 @@
-<html>
-<head>
 
-
-	<style type="text/css">
-
-
-		#wall {
-			position:fixed;
-			right:0;
-			bottom:0;
-			left:0;
-			width: 100%;
-		}
-
-		#wall > img {
-			display:block;
-			margin:auto;
-			width: 100%;
-		}
-
-
-		#silo {
-			position:fixed;
-			right:0;
-			bottom:0;
-			left:0;
-		}
-
-		#silo > img {
-			display:block;
-			margin:auto;
-		}
-
-		#enter {
-			position:fixed;
-			right:0;
-			bottom:0;
-			left:0;
-			width: 100%;
-		}
-
-		#enter > img {
-			display:block;
-			margin:auto;
-			width: 100%;
-		}
-
-		
-
-		#cell > img {
-			position:absolute;
-			right:0;
-			bottom:0;
-			left:0;
-		}
-
-		#cell > img {
-			display:block;
-			margin:auto;
-			width:100%
-		}
-
-		#free {
-			position:fixed;
-			right:0;
-			bottom:0;
-			left:0;
-			width: 100%;
-		}
-
-		#free > img {
-			display:block;
-			margin:auto;
-			width: 100%;
-		}
-
-		
-
-
-	</style>
-</head>
-
-		
-
-		
-<body>
 
 	<div id="wall" data-500-end="opacity:100;" data-top="opacity:0;"  >
 		<%= image_tag "brick-wall.jpg" %>
@@ -102,11 +16,11 @@
 		<%= image_tag "free.jpg" %>
 	</div>
 
-	<div id="enter" data-500-top="opacity:0;" data-end="opacity:1;"  >
-		<%= link_to 'ENTER SHIELD', '/resources', method: :get, class: "btn btn-default" %>
-	</div>
+	<a href="/resources" target="_blank">
+		<div id="enter" data-0-top="opacity:0;" data-end="opacity:1;" ></div>
+	</a>
 
-	
+
 
 
 
@@ -116,9 +30,7 @@
 		skrollr.init();
 	</script>
 
-</body>
 
-</html>
 
 
 
